<?xml version="1.0"?>
<package format="2">
  <name>pbl_navstack</name>
  <version>0.0.1</version>
  <description>Launch files and code for autonomous navigation of Unitree A1 robot using Google Cartographer</description>
  <author email="dplozza@ethz.ch">Davide Plozza</author>
  <maintainer email="dplozza@ethz.ch">Davide Plozza</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
